# Serverless-YOLO-Cloud-Detection

./: .gitignore  CONTRIBUTING.md  README.md
Firebase_functions/: .gitignore  README.md  firebase.json
Firebase_functions/functions/: main.py  requirements.txt
cloud_run/: .dockerignore  Dockerfile  README.md  pyproject.toml
cloud_run/src/: __init__.py  app.py  main.py
mobile_app/: .gitignore  LICENSE  README.md  firebase.json  pubspec.yaml
mobile_app/android/: build.gradle  settings.gradle
mobile_app/android/app/: build.gradle
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/kotlin/com/carlosmiranda/yoloprueba/: MainActivity.kt
mobile_app/linux/: CMakeLists.txt
mobile_app/linux/runner/: my_application.cc
mobile_app/web/: index.html  manifest.json
mobile_app/windows/: CMakeLists.txt
mobile_app/windows/runner/: Runner.rc  main.cpp
